--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "bulma": "^0.7.4",
+    "chai": "^3.5.0",
     "copy-webpack-plugin": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv-webpack": "^1.7.0",
@@ -28,7 +29,9 @@
     "file-loader": "^3.0.1",
     "filestack-js": "^2.0.2",
     "font-awesome": "^4.7.0",
+    "istanbul": "^0.4.5",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^3.3.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19",
     "mongoose-friends-plugin": "^0.7.3",
@@ -38,11 +41,8 @@
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
     "react-select": "^2.4.2",
-    "url-loader": "^1.1.2",
-    "chai": "^3.5.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.3.0",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "url-loader": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
